fix id:before hack box overlapping schema link

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -18,7 +18,7 @@
 }
 
 *[id]:before {
-  display: none;
+  display: block;
   content: " ";
   margin-top: -75px;
   height: 75px;
